k8s/security/uat/peer-authentication-strict.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: uat
spec:
  mtls:
    mode: STRICT
