k8s/security/uat/allow-same-namespace.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-same-namespace
  namespace: uat
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["uat"]
